finish add plot

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,15 @@
               </div>
             </div>
 
+            
+
+          </div>
+
+          <div class="row"><br><br>
+            <div class="plot">
+              <h5 class="plot-title text-center"><strong>Median House Price In LA County</strong></h5>
+              <img src="../static/plot.png" class="summary_plot" alt="House Price">
+            </div>
           </div>
          
           
