--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,15 @@
+.navbar{
+    background-color: #c82021;
+    color: white;
+
+    
+}
+
+.btn{
+    background-color: #c82021;
+    color: white;
+}
+
 .wmx4 {
     max-width: 32.4102564rem !important;
 }
@@ -22,5 +34,31 @@
 
 .plot-title{
     text-align: center;
-    position: absolute;
+ 
 }
+
+
+.summary_plot{
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    
+}
+
+.footer {
+    background-color:whitesmoke;
+    border-top-style: solid;
+    border-top-width: 5px;
+    border-top-color: #c82021;
+    color: black;
+    min-height: 55px;
+    font-size: 12px;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding-top: 15px;
+  
+  }
