--- a/templates/index.html
+++ b/templates/index.html
@@ -10,36 +10,38 @@
     <link rel="stylesheet" href="../static/style.css" type="text/css">
 </head>
 
+<!--Navbar-->
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand text-white" href="/"><strong>Home</strong></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link text-white" target="_blank" href="https://www.redfin.com/county/321/CA/Los-Angeles-County/"><strong>Redfin Website</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#"><strong>Data</strong></a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <body>
     <div class="container">
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+        
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Redfin Website</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Data</a>
-                </li>
-              </ul>
-            </div>
-        </nav>
-
-        <div class="jumbotron text-center">
+        <div class="jumbotron text-center bg-light">
             <h1><strong>LA County Housing Information</strong></h1><br>
-            
+            <hr>
             <p class = "fs-title ta-center w90 wmx4 mx-auto mb24">
                 You can get a sense of the most current LA county 
                 housing price/price range by clicking below button. 
                 This program scrapes live Redfin housing data and will display in below.
             </p>
-            <p><a class="btn btn-dark" href="/scrape" role="button">Get Info!</a></p>
+            <p><a class="btn" href="/scrape" role="button"><strong>Start Scrape!</strong></a></p>
         </div>
      
         <div class="summary_content">
@@ -72,8 +74,7 @@
 
           <div class="row"><br><br>
             <div class="plot">
-              <h5 class="plot-title text-center"><strong>Median House Price In LA County</strong></h5>
-              <img src="../static/plot.png" class="summary_plot" alt="House Price">
+              <img src="../static/plot.png" class="summary_plot img-fluid" alt="House Price">
             </div>
           </div>
          
@@ -85,6 +86,10 @@
 
     </div>
 </body>
+
+<footer>
+  <div class="footer">&copy; Copyright Peter Sun</div>
+</footer>
 
 </html>
 
