--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <a class="nav-link text-white" target="_blank" href="https://www.redfin.com/county/321/CA/Los-Angeles-County/"><strong>Redfin Website</strong></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#"><strong>Data</strong></a>
+        <a class="nav-link text-white" href="/data"><strong>Data</strong></a>
       </li>
     </ul>
   </div>
