--- a/static/style.css
+++ b/static/style.css
@@ -62,3 +62,20 @@
     padding-top: 15px;
   
   }
+
+
+
+.dataframe{
+    text-align: center;
+    font-size: small;
+    border-collapse: collapse ;
+    width: 100%;
+    border: 0px;
+}
+
+.dataframe th{
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+tr:nth-child(even) {background-color: #f2f2f2;}
+tr:hover {background-color: #f5f5f5;}
