--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+
+* {
+    font: inherit;
+}
+
+
 .navbar{
     background-color: #c82021;
     color: white;
@@ -18,6 +24,7 @@
 }
 .ta-center {
     text-align: center !important;
+    
 }
 
 .mx-auto {
@@ -26,6 +33,31 @@
 }
 .mb24 {
     margin-bottom: 24px !important;
+}
+
+.house {
+    position: relative;
+    height: 550px;
+    padding: 20px;
+    margin: 0;
+    background-image: url("house.png");
+    background-attachment: fixed;
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.house h1 {
+    margin-top: 200px;
+    font-size: 4rem;
+    animation: title 1.2s forwards linear;
+  }
+
+.kpi{
+    text-align: center;
 }
 
 .card{
