--- a/templates/data.html
+++ b/templates/data.html
@@ -12,21 +12,21 @@
 
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand text-white" href="/"><strong>Home</strong></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link text-white" target="_blank" href="https://www.redfin.com/county/321/CA/Los-Angeles-County/"><strong>Redfin Website</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#"><strong>Data</strong></a>
-        </li>
-      </ul>
-    </div>
+  <a class="navbar-brand text-white" href="/">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link text-white" target="_blank" href="https://www.redfin.com/county/321/CA/Los-Angeles-County/">Redfin Website</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/data">Data</a>
+      </li>
+    </ul>
+  </div>
 </nav>
 <br><br>
 <body>
